# together

./: .gitignore  Cargo.toml  README.md  go.mod  mix.exs
config/: config.exs
lib/: together.ex
lib/together/: application.ex  state_machine.ex  switch.ex
priv/run/: ch.go  hello.exs  hello2.exs  hello3.exs
src/: channel.rs  main.rs
test/: together_test.exs
