[package]
name = "together"
version = "0.1.0"
authors = ["AlexanderChen1989 <alexanderchenmh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "channel"
path = "src/channel.rs"

[[bin]]
name = "learn"
path = "src/learn.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
crossbeam = "0.7"
crossbeam-queue = "0.1"
crossbeam-channel = "0.3"